# M.Tech-Final-Project

./: .gitignore  PROMPT  README.md  main.py  pyproject.toml  rerun_meta_attack.py  rerun_nettack.py  run_elliptic_evaluation.py  run_full_pipeline.py  run_visualizations.py
attacks/: __init__.py  base.py  dice.py  edge_flip.py  feature_perturbation.py  gradient_attack.py  meta_attack.py  nettack.py  random_structure.py  runner.py  temporal_perturbation.py
checkpoints/: gat_cora_baseline.npz  gcn_cora_baseline.npz  gcn_elliptic_baseline.npz  gcn_elliptic_train_era.npz
datasets/: __init__.py  cora_loader.py  dynamic_graph.py  elliptic_loader.py
defense/: __init__.py  edge_pruning.py  feature_smoothing.py  gnnguard.py  graph_reconstruction.py  ontology_defense.py  pipeline.py
evaluation/: __init__.py
experiments/: __init__.py
models/: __init__.py  gat.py  gcn.py  train.py
results/: VERDICT.md  final_verdict.md  phase45_cache.json  phase4_attack_results.md  pipeline_log.txt  validation_report.md
results/tables/: cora_results.md  elliptic_results.md
utils/: __init__.py  config.py  graph_utils.py  metrics.py
visualization/: __init__.py  bar_charts.py  embeddings.py  graph_viz.py  line_plots.py
