[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gnn-adversarial-defense"
version = "0.1.0"
description = "Adversarial Attacks and Structural Defense in GNNs for Node Classification"
requires-python = ">=3.10"
dependencies = [
    "jax[cpu]>=0.4.25",
    "flax>=0.8.0",
    "optax>=0.2.2",
    "torch>=2.2.0",
    "torch-geometric>=2.5.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "networkx>=3.2.0",
    "umap-learn>=0.5.5",
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
]

[tool.setuptools.packages.find]
where = ["."]
